Estructura inicial de la cabecera Please enter the commit message for your changes. Lines starting

--- a/blog.html
+++ b/blog.html
@@ -9,9 +9,13 @@
     <title>Document</title>
 </head>
 <body>
-
-    <h1>Este es mi primer repositorio</h1>
+<div id="container">
+<div id="cabecera">
+    <h1>Cabecera</h1>
+</div>
+    <h2>Este es mi primer repositorio</h2>
     <p>Este es el parrafo de inicio</p>
+</div>
     
 </body>
 </html>
