--- a/blog.html
+++ b/blog.html
@@ -6,12 +6,19 @@
     <link rel="stylesheet" href="css/estilos.css"/>
     
     <meta name="viewport" content="width=device-width>, initial-scale=1.0">
-    <title>Document</title>
+    <title>Master</title>
 </head>
 <body>
 
-    <h1>Este es mi primer repositorio</h1>
+    <div id="container">
+        <div id="cabecera">
+        <h1>CABECERA</h1>
+        </div>
+
+    <h2>Este es mi primer repositorio</h2>
     <p>Este es el parrafo de inicio</p>
+
+    </div>
     
 </body>
 </html>
