--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/estilos.css"/>
     
     <meta name="viewport" content="width=device-width>, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cabecera</title>
 </head>
 <body>
 <div id="container">
