--- a/blog.html
+++ b/blog.html
@@ -11,6 +11,7 @@
 <body>
 <div id="container">
 <div id="cabecera">
+    <img src="imagenes/aguila.png" alt="Aguila" width="100" height="100" align="left"/>
     <h1>Cabecera</h1>
 </div>
     <h2>Este es mi primer repositorio</h2>
